--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,73 @@
+@import "~bootstrap/dist/css/bootstrap.min.css";
+@import "~font-awesome/css/font-awesome.min.css";
+
 /* You can add global styles to this file, and also import other style files */
+div.card-header {
+    font-size: large;
+   }
+   
+   div.card {
+     margin-top: 10px
+   }
+   
+   .table {
+     margin-top: 10px
+   }
+
+
+   body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+      sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+      monospace;
+  }
+  
+
+  
+.navBar {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    min-height: 10vh;
+    background-color: salmon;
+  }
+  
+  .navBarLinks {
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+    width: 20%;
+  }
+
+  .houses {
+    display: flex;
+    flex-wrap: wrap;
+    background-color: #56642a;
+  }
+  
+  .houseTile {
+    min-height: 15vh;
+    width: 200px;
+    border-radius: 5px;
+    justify-content: space-around;
+    background-color: #92A332;
+    margin: 1%;
+    padding: 10px;
+  }
+  
+  .imgContainer img{
+    height: 80px;
+  }
+
+  .houses {
+    display: flex;
+    flex-wrap: wrap;
+    background-color: #56642a;
+  }
